--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
+language: perl
 perl:
-  - "5.18"
+  - "5.22"
   - "5.14"
   - "5.8"
 before_install: git submodule update --init
@@ -10,7 +11,7 @@ notifications:
     - wakaba@suikawiki.org
   irc:
     channels:
-      - "irc.suikawiki.org#mechanize"
+      - "ircs://irc.suikawiki.org:6697#mechanize"
     use_notice: true
 env:
   global:
