--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = t_deps/modules/test-x1
 	url = git://github.com/wakaba/perl-test-x1
 	track = master
+[submodule "modules/web-encodings"]
+	path = modules/web-encodings
+	url = https://github.com/manakai/perl-web-encodings
+	track = master
