--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "t_deps/modules/test-x1"]
 	path = t_deps/modules/test-x1
-	url = git://github.com/wakaba/perl-test-x1
+	url = https://github.com/wakaba/perl-test-x1
 	track = master
 [submodule "modules/web-encodings"]
 	path = modules/web-encodings
