--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -1,7 +1,7 @@
 {
    "jobs" : {
       "batch_github_master" : {
-         "if" : "${{ github.ref == \u0022refs/heads/master\u0022 }}",
+         "if" : "${{ github.ref == 'refs/heads/master' }}",
          "runs-on" : "ubuntu-latest",
          "steps" : [
             {
@@ -29,7 +29,7 @@
    "on" : {
       "schedule" : [
          {
-            "cron" : "10 6 * *"
+            "cron" : "15 6 * *"
          }
       ]
    }
