--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -5,6 +5,9 @@
          "runs-on" : "ubuntu-latest",
          "steps" : [
             {
+               "uses" : "actions/checkout@v2"
+            },
+            {
                "run" : "git config --global user.email \u0022temp@github.test\u0022"
             },
             {
@@ -29,7 +32,7 @@
    "on" : {
       "schedule" : [
          {
-            "cron" : "17 6 * *"
+            "cron" : "26 6 * *"
          }
       ]
    }
