--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,10 +11,7 @@
          "runs-on" : "ubuntu-latest",
          "steps" : [
             {
-               "run" : "git rev-parse HEAD > head.txt"
-            },
-            {
-               "run" : "curl -f -s -S --request POST --header \u0022Authorization:token $GITHUB_TOKEN\u0022 --header \u0022Content-Type:application/json\u0022 --data-binary \u0022{\u005C\u0022base\u005C\u0022:\u005C\u0022master\u005C\u0022,\u005C\u0022head\u005C\u0022:\u005C\u0022`cat head.txt`\u005C\u0022,\u005C\u0022commit_message\u005C\u0022:\u005C\u0022auto-merge $GITHUB_REF into master\u005C\u0022}\u0022 \u0022https://api.github.com/repos/$GITHUB_REPOSITORY/merges\u0022 && curl -f https://$BWALL_TOKEN:@$BWALL_HOST/ping/merger.${GITHUB_REF/refs\u005C/heads\u005C//}/${GITHUB_REPOSITORY:/\u005C//%2F} -X POST"
+               "run" : "curl -f -s -S --request POST --header \u0022Authorization:token $GITHUB_TOKEN\u0022 --header \u0022Content-Type:application/json\u0022 --data-binary \u0022{\u005C\u0022base\u005C\u0022:\u005C\u0022master\u005C\u0022,\u005C\u0022head\u005C\u0022:\u005C\u0022$GITHUB_SHA\u005C\u0022,\u005C\u0022commit_message\u005C\u0022:\u005C\u0022auto-merge $GITHUB_REF into master\u005C\u0022}\u0022 \u0022https://api.github.com/repos/$GITHUB_REPOSITORY/merges\u0022 && curl -f https://$BWALL_TOKEN:@$BWALL_HOST/ping/merger.${GITHUB_REF/refs\u005C/heads\u005C//}/${GITHUB_REPOSITORY:/\u005C//%2F} -X POST"
             }
          ]
       },
@@ -29,10 +26,7 @@
          "runs-on" : "ubuntu-latest",
          "steps" : [
             {
-               "run" : "git rev-parse HEAD > head.txt"
-            },
-            {
-               "run" : "curl -f -s -S --request POST --header \u0022Authorization:token $GITHUB_TOKEN\u0022 --header \u0022Content-Type:application/json\u0022 --data-binary \u0022{\u005C\u0022base\u005C\u0022:\u005C\u0022master\u005C\u0022,\u005C\u0022head\u005C\u0022:\u005C\u0022`cat head.txt`\u005C\u0022,\u005C\u0022commit_message\u005C\u0022:\u005C\u0022auto-merge $GITHUB_REF into master\u005C\u0022}\u0022 \u0022https://api.github.com/repos/$GITHUB_REPOSITORY/merges\u0022 && curl -f https://$BWALL_TOKEN:@$BWALL_HOST/ping/merger.${GITHUB_REF/refs\u005C/heads\u005C//}/${GITHUB_REPOSITORY:/\u005C//%2F} -X POST"
+               "run" : "curl -f -s -S --request POST --header \u0022Authorization:token $GITHUB_TOKEN\u0022 --header \u0022Content-Type:application/json\u0022 --data-binary \u0022{\u005C\u0022base\u005C\u0022:\u005C\u0022master\u005C\u0022,\u005C\u0022head\u005C\u0022:\u005C\u0022$GITHUB_SHA\u005C\u0022,\u005C\u0022commit_message\u005C\u0022:\u005C\u0022auto-merge $GITHUB_REF into master\u005C\u0022}\u0022 \u0022https://api.github.com/repos/$GITHUB_REPOSITORY/merges\u0022 && curl -f https://$BWALL_TOKEN:@$BWALL_HOST/ping/merger.${GITHUB_REF/refs\u005C/heads\u005C//}/${GITHUB_REPOSITORY:/\u005C//%2F} -X POST"
             }
          ]
       },
@@ -42,6 +36,9 @@
          },
          "runs-on" : "ubuntu-latest",
          "steps" : [
+            {
+               "uses" : "actions/checkout@v2"
+            },
             {
                "run" : "make test-deps"
             },
