--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -32,7 +32,7 @@
    "on" : {
       "schedule" : [
          {
-            "cron" : "26 6 * *"
+            "cron" : "29 6 * * *"
          }
       ]
    }
