--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -2,6 +2,9 @@
    "jobs" : {
       "batch_github_master" : {
          "if" : "${{ github.ref == 'refs/heads/master' }}",
+         "permissions" : {
+            "contents" : "write"
+         },
          "runs-on" : "ubuntu-latest",
          "steps" : [
             {
@@ -32,7 +35,7 @@
    "on" : {
       "schedule" : [
          {
-            "cron" : "5 7 * * *"
+            "cron" : "45 7 * * *"
          }
       ]
    }
