--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -36,7 +36,7 @@
    "on" : {
       "schedule" : [
          {
-            "cron" : "*/5 8 * * *"
+            "cron" : "40 8 * * *"
          }
       ]
    }
