--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -14,8 +14,10 @@
                "run" : "git config --global user.name \u0022GitHub Actions\u0022"
             },
             {
-              "run": "git config --replace-all url.https://$GH_ACCESS_TOKEN@github.com/.pushInsteadOf https://github.com/",
-              "env": {"GH_ACCESS_TOKEN": "${{ secrets.GH_ACCESS_TOKEN }}"}
+               "env" : {
+                  "GH_ACCESS_TOKEN" : "${{ secrets.GH_ACCESS_TOKEN }}"
+               },
+               "run" : "git config --replace-all url.https://$GH_ACCESS_TOKEN@github.com/.pushInsteadOf https://github.com/"
             },
             {
                "run" : "make deps"
@@ -36,7 +38,7 @@
    "on" : {
       "schedule" : [
          {
-            "cron" : "42 9 * * *"
+            "cron" : "55 9 * * *"
          }
       ]
    }
