--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -5,19 +5,16 @@
          "runs-on" : "ubuntu-latest",
          "steps" : [
             {
-               "uses" : "actions/checkout@v2"
+               "uses" : "actions/checkout@v2",
+               "with" : {
+                  "token" : "${{ secrets.GH_ACCESS_TOKEN }}"
+               }
             },
             {
                "run" : "git config --global user.email \u0022temp@github.test\u0022"
             },
             {
                "run" : "git config --global user.name \u0022GitHub Actions\u0022"
-            },
-            {
-               "env" : {
-                  "GH_ACCESS_TOKEN" : "${{ secrets.GH_ACCESS_TOKEN }}"
-               },
-               "run" : "git config --replace-all url.https://$GH_ACCESS_TOKEN@github.com/.pushInsteadOf https://github.com/"
             },
             {
                "run" : "make deps"
@@ -38,7 +35,7 @@
    "on" : {
       "schedule" : [
          {
-            "cron" : "55 9 * * *"
+            "cron" : "12 12 * * *"
          }
       ]
    }
